--- a/BigPlanetTracks/AndroidManifest.xml
+++ b/BigPlanetTracks/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="tyt.android.bigplanettracks"
-	android:versionCode="123"
-	android:versionName="2.0">
+	android:versionCode="124"
+	android:versionName="2.0a">
 
 	<application android:name="tyt.android.bigplanettracks.maps.BigPlanetApp" android:debuggable="false"
 		android:icon="@drawable/globe" android:label="@string/app_name">
@@ -32,6 +32,8 @@
 		<activity android:name="tyt.android.bigplanettracks.tracks.TrackTabViewActivity"
 			android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar">
 		</activity>
+		
+		<service android:name=".MyLocationService" android:enabled="true"/>
 	
 	</application>
 	
