--- a/BigPlanetTracks/AndroidManifest.xml
+++ b/BigPlanetTracks/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="tyt.android.bigplanettracks"
 	android:versionCode="125"
-	android:versionName="2.1">
+	android:versionName="2.1 beta 1">
 
 	<application android:name="tyt.android.bigplanettracks.maps.BigPlanetApp" android:debuggable="false"
 		android:icon="@drawable/globe" android:label="@string/app_name">
