--- a/BigPlanetTracks/AndroidManifest.xml
+++ b/BigPlanetTracks/AndroidManifest.xml
@@ -44,10 +44,13 @@
 	<uses-permission android:name="android.permission.INTERNET"/>
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-	<uses-permission android:name="android.permission.WAKE_LOCK" />
+	<uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 	
-	<uses-sdk android:minSdkVersion="3" />
+	<uses-sdk android:minSdkVersion="4" />
 	<supports-screens
+		android:resizeable="true"
+		android:xlargeScreens="true"
 		android:largeScreens="true"
 		android:normalScreens="true"
 		android:smallScreens="true"
