--- a/BigPlanetTracks/AndroidManifest.xml
+++ b/BigPlanetTracks/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="tyt.android.bigplanettracks"
-	android:versionCode="133"
-	android:versionName="2.1 RC1">
+	android:versionCode="134"
+	android:versionName="2.1 RC2">
 
-	<application android:name="tyt.android.bigplanettracks.maps.BigPlanetApp" android:debuggable="true"
+	<application android:name="tyt.android.bigplanettracks.maps.BigPlanetApp" android:debuggable="false"
 		android:icon="@drawable/globe" android:label="@string/app_name">
 		
 		<activity android:name=".BigPlanetTracks" android:launchMode="singleTop">
